Fixed spacing between twitter and fb buttons

--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -39,6 +39,10 @@ h1 {
   padding-bottom: 20px;
 }
 
+.bottom-xsmall-spacer {
+  padding-bottom: 10px; 
+}
+
 .top-small-spacer {
   padding-top: 20px;
 }
